parser/GoliteParser.cpp

// Generated from GoliteParser.g4 by ANTLR 4.11.1


#include "GoliteParserListener.h"
#include "GoliteParserVisitor.h"

#include "GoliteParser.h"


using namespace antlrcpp;
using namespace parser;

using namespace antlr4;

namespace {

struct GoliteParserStaticData final {
  GoliteParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  GoliteParserStaticData(const GoliteParserStaticData&) = delete;
  GoliteParserStaticData(GoliteParserStaticData&&) = delete;
  GoliteParserStaticData& operator=(const GoliteParserStaticData&) = delete;
  GoliteParserStaticData& operator=(GoliteParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag goliteparserParserOnceFlag;
GoliteParserStaticData *goliteparserParserStaticData = nullptr;

void goliteparserParserInitialize() {
  assert(goliteparserParserStaticData == nullptr);
  auto staticData = std::make_unique<GoliteParserStaticData>(
    std::vector<std::string>{
      "program", "types", "typeDeclaration", "fields", "decl", "type", "declarations", 
      "declaration", "ids", "functions", "function", "parameters", "returnType", 
      "statements", "statement", "invocation", "block", "assignment", "print", 
      "scan", "delete", "conditional", "loop", "return", "expression", "boolExpression", 
      "boolTerm", "equalTerm", "relationTerm", "arithmeticExpression", "simpleTerm", 
      "term", "unaryTerm", "selectorTerm", "factor", "arguments", "lvalue"
    },
    std::vector<std::string>{
      "", "'type'", "'struct'", "'var'", "'func'", "'if'", "'else'", "'for'", 
      "'return'", "'scan'", "'printf'", "'delete'", "'new'", "'true'", "'false'", 
      "'nil'", "'int'", "'bool'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
      "'='", "','", "';'", "':'", "'.'", "'+'", "'-'", "'*'", "'/'", "'%'", 
      "'!'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
      "'%d'"
    },
    std::vector<std::string>{
      "", "TYPE", "STRUCT", "VAR", "FUNC", "IF", "ELSE", "FOR", "RETURN", 
      "SCAN", "PRINTF", "DELETE", "NEW", "TRUE", "FALSE", "NIL", "INT", 
      "BOOL", "L_PAREN", "R_PAREN", "L_CURLY", "R_CURLY", "L_BRACKET", "R_BRACKET", 
      "ASSIGN", "COMMA", "SEMI", "COLON", "DOT", "PLUS", "MINUS", "STAR", 
      "DIV", "MOD", "EXCLAMATION", "LOGICAL_OR", "LOGICAL_AND", "EQUALS", 
      "NOT_EQUALS", "LESS", "LESS_OR_EQUALS", "GREATER", "GREATER_OR_EQUALS", 
      "PERCENT_D", "ID", "NUMBER", "STRING", "WS", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  goliteparserParserStaticData = staticData.release();
}

}

GoliteParser::GoliteParser(TokenStream *input) : GoliteParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

GoliteParser::GoliteParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  GoliteParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *goliteparserParserStaticData->atn, goliteparserParserStaticData->decisionToDFA, goliteparserParserStaticData->sharedContextCache, options);
}

GoliteParser::~GoliteParser() {
  delete _interpreter;
}

const atn::ATN& GoliteParser::getATN() const {
  return *goliteparserParserStaticData->atn;
}

std::string GoliteParser::getGrammarFileName() const {
  return "GoliteParser.g4";
}

const std::vector<std::string>& GoliteParser::getRuleNames() const {
  return goliteparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& GoliteParser::getVocabulary() const {
  return goliteparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView GoliteParser::getSerializedATN() const {
  return goliteparserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

GoliteParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GoliteParser::TypesContext* GoliteParser::ProgramContext::types() {
  return getRuleContext<GoliteParser::TypesContext>(0);
}

GoliteParser::DeclarationsContext* GoliteParser::ProgramContext::declarations() {
  return getRuleContext<GoliteParser::DeclarationsContext>(0);
}

GoliteParser::FunctionsContext* GoliteParser::ProgramContext::functions() {
  return getRuleContext<GoliteParser::FunctionsContext>(0);
}

tree::TerminalNode* GoliteParser::ProgramContext::EOF() {
  return getToken(GoliteParser::EOF, 0);
}


size_t GoliteParser::ProgramContext::getRuleIndex() const {
  return GoliteParser::RuleProgram;
}

void GoliteParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void GoliteParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any GoliteParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GoliteParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

GoliteParser::ProgramContext* GoliteParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, GoliteParser::RuleProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    types();
    setState(75);
    declarations();
    setState(76);
    functions();
    setState(77);
    match(GoliteParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypesContext ------------------------------------------------------------------

GoliteParser::TypesContext::TypesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GoliteParser::TypeDeclarationContext *> GoliteParser::TypesContext::typeDeclaration() {
  return getRuleContexts<GoliteParser::TypeDeclarationContext>();
}

GoliteParser::TypeDeclarationContext* GoliteParser::TypesContext::typeDeclaration(size_t i) {
  return getRuleContext<GoliteParser::TypeDeclarationContext>(i);
}


size_t GoliteParser::TypesContext::getRuleIndex() const {
  return GoliteParser::RuleTypes;
}

void GoliteParser::TypesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypes(this);
}

void GoliteParser::TypesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypes(this);
}


std::any GoliteParser::TypesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GoliteParserVisitor*>(visitor))
    return parserVisitor->visitTypes(this);
  else
    return visitor->visitChildren(this);
}

GoliteParser::TypesContext* GoliteParser::types() {
  TypesContext *_localctx = _tracker.createInstance<TypesContext>(_ctx, getState());
  enterRule(_localctx, 2, GoliteParser::RuleTypes);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GoliteParser::TYPE) {
      setState(79);
      typeDeclaration();
      setState(84);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDeclarationContext ------------------------------------------------------------------

GoliteParser::TypeDeclarationContext::TypeDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GoliteParser::TypeDeclarationContext::TYPE() {
  return getToken(GoliteParser::TYPE, 0);
}

tree::TerminalNode* GoliteParser::TypeDeclarationContext::ID() {
  return getToken(GoliteParser::ID, 0);
}

tree::TerminalNode* GoliteParser::TypeDeclarationContext::STRUCT() {
  return getToken(GoliteParser::STRUCT, 0);
}

tree::TerminalNode* GoliteParser::TypeDeclarationContext::L_CURLY() {
  return getToken(GoliteParser::L_CURLY, 0);
}

GoliteParser::FieldsContext* GoliteParser::TypeDeclarationContext::fields() {
  return getRuleContext<GoliteParser::FieldsContext>(0);
}

tree::TerminalNode* GoliteParser::TypeDeclarationContext::R_CURLY() {
  return getToken(GoliteParser::R_CURLY, 0);
}

tree::TerminalNode* GoliteParser::TypeDeclarationContext::SEMI() {
  return getToken(GoliteParser::SEMI, 0);
}


size_t GoliteParser::TypeDeclarationContext::getRuleIndex() const {
  return GoliteParser::RuleTypeDeclaration;
}

void GoliteParser::TypeDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeDeclaration(this);
}

void GoliteParser::TypeDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeDeclaration(this);
}


std::any GoliteParser::TypeDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GoliteParserVisitor*>(visitor))
    return parserVisitor->visitTypeDeclaration(this);
  else
    return visitor->visitChildren(this);
}

GoliteParser::TypeDeclarationContext* GoliteParser::typeDeclaration() {
  TypeDeclarationContext *_localctx = _tracker.createInstance<TypeDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, GoliteParser::RuleTypeDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    match(GoliteParser::TYPE);
    setState(86);
    match(GoliteParser::ID);
    setState(87);
    match(GoliteParser::STRUCT);
    setState(88);
    match(GoliteParser::L_CURLY);
    setState(89);
    fields();
    setState(90);
    match(GoliteParser::R_CURLY);
    setState(91);
    match(GoliteParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FieldsContext ------------------------------------------------------------------

GoliteParser::FieldsContext::FieldsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GoliteParser::DeclContext *> GoliteParser::FieldsContext::decl() {
  return getRuleContexts<GoliteParser::DeclContext>();
}

GoliteParser::DeclContext* GoliteParser::FieldsContext::decl(size_t i) {
  return getRuleContext<GoliteParser::DeclContext>(i);
}

std::vector<tree::TerminalNode *> GoliteParser::FieldsContext::SEMI() {
  return getTokens(GoliteParser::SEMI);
}

tree::TerminalNode* GoliteParser::FieldsContext::SEMI(size_t i) {
  return getToken(GoliteParser::SEMI, i);
}


size_t GoliteParser::FieldsContext::getRuleIndex() const {
  return GoliteParser::RuleFields;
}

void GoliteParser::FieldsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFields(this);
}

void GoliteParser::FieldsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFields(this);
}


std::any GoliteParser::FieldsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GoliteParserVisitor*>(visitor))
    return parserVisitor->visitFields(this);
  else
    return visitor->visitChildren(this);
}

GoliteParser::FieldsContext* GoliteParser::fields() {
  FieldsContext *_localctx = _tracker.createInstance<FieldsContext>(_ctx, getState());
  enterRule(_localctx, 6, GoliteParser::RuleFields);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    decl();
    setState(94);
    match(GoliteParser::SEMI);
    setState(100);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GoliteParser::ID) {
      setState(95);
      decl();
      setState(96);
      match(GoliteParser::SEMI);
      setState(102);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

GoliteParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GoliteParser::DeclContext::ID() {
  return getToken(GoliteParser::ID, 0);
}

GoliteParser::TypeContext* GoliteParser::DeclContext::type() {
  return getRuleContext<GoliteParser::TypeContext>(0);
}


size_t GoliteParser::DeclContext::getRuleIndex() const {
  return GoliteParser::RuleDecl;
}

void GoliteParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void GoliteParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}


std::any GoliteParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GoliteParserVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

GoliteParser::DeclContext* GoliteParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 8, GoliteParser::RuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    match(GoliteParser::ID);
    setState(104);
    type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

GoliteParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GoliteParser::TypeContext::INT() {
  return getToken(GoliteParser::INT, 0);
}

tree::TerminalNode* GoliteParser::TypeContext::BOOL() {
  return getToken(GoliteParser::BOOL, 0);
}

tree::TerminalNode* GoliteParser::TypeContext::STAR() {
  return getToken(GoliteParser::STAR, 0);
}

tree::TerminalNode* GoliteParser::TypeContext::ID() {
  return getToken(GoliteParser::ID, 0);
}


size_t GoliteParser::TypeContext::getRuleIndex() const {
  return GoliteParser::RuleType;
}

void GoliteParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void GoliteParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


std::any GoliteParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GoliteParserVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

GoliteParser::TypeContext* GoliteParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 10, GoliteParser::RuleType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(110);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GoliteParser::INT: {
        enterOuterAlt(_localctx, 1);
        setState(106);
        match(GoliteParser::INT);
        break;
      }

      case GoliteParser::BOOL: {
        enterOuterAlt(_localctx, 2);
        setState(107);
        match(GoliteParser::BOOL);
        break;
      }

      case GoliteParser::STAR: {
        enterOuterAlt(_localctx, 3);
        setState(108);
        match(GoliteParser::STAR);
        setState(109);
        match(GoliteParser::ID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationsContext ------------------------------------------------------------------

GoliteParser::DeclarationsContext::DeclarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GoliteParser::DeclarationContext *> GoliteParser::DeclarationsContext::declaration() {
  return getRuleContexts<GoliteParser::DeclarationContext>();
}

GoliteParser::DeclarationContext* GoliteParser::DeclarationsContext::declaration(size_t i) {
  return getRuleContext<GoliteParser::DeclarationContext>(i);
}


size_t GoliteParser::DeclarationsContext::getRuleIndex() const {
  return GoliteParser::RuleDeclarations;
}

void GoliteParser::DeclarationsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclarations(this);
}

void GoliteParser::DeclarationsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclarations(this);
}


std::any GoliteParser::DeclarationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GoliteParserVisitor*>(visitor))
    return parserVisitor->visitDeclarations(this);
  else
    return visitor->visitChildren(this);
}

GoliteParser::DeclarationsContext* GoliteParser::declarations() {
  DeclarationsContext *_localctx = _tracker.createInstance<DeclarationsContext>(_ctx, getState());
  enterRule(_localctx, 12, GoliteParser::RuleDeclarations);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GoliteParser::VAR) {
      setState(112);
      declaration();
      setState(117);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

GoliteParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GoliteParser::DeclarationContext::VAR() {
  return getToken(GoliteParser::VAR, 0);
}

GoliteParser::IdsContext* GoliteParser::DeclarationContext::ids() {
  return getRuleContext<GoliteParser::IdsContext>(0);
}

GoliteParser::TypeContext* GoliteParser::DeclarationContext::type() {
  return getRuleContext<GoliteParser::TypeContext>(0);
}

tree::TerminalNode* GoliteParser::DeclarationContext::SEMI() {
  return getToken(GoliteParser::SEMI, 0);
}


size_t GoliteParser::DeclarationContext::getRuleIndex() const {
  return GoliteParser::RuleDeclaration;
}

void GoliteParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void GoliteParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}


std::any GoliteParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GoliteParserVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

GoliteParser::DeclarationContext* GoliteParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 14, GoliteParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(GoliteParser::VAR);
    setState(119);
    ids();
    setState(120);
    type();
    setState(121);
    match(GoliteParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdsContext ------------------------------------------------------------------

GoliteParser::IdsContext::IdsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> GoliteParser::IdsContext::ID() {
  return getTokens(GoliteParser::ID);
}

tree::TerminalNode* GoliteParser::IdsContext::ID(size_t i) {
  return getToken(GoliteParser::ID, i);
}

std::vector<tree::TerminalNode *> GoliteParser::IdsContext::COMMA() {
  return getTokens(GoliteParser::COMMA);
}

tree::TerminalNode* GoliteParser::IdsContext::COMMA(size_t i) {
  return getToken(GoliteParser::COMMA, i);
}


size_t GoliteParser::IdsContext::getRuleIndex() const {
  return GoliteParser::RuleIds;
}

void GoliteParser::IdsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIds(this);
}

void GoliteParser::IdsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIds(this);
}


std::any GoliteParser::IdsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GoliteParserVisitor*>(visitor))
    return parserVisitor->visitIds(this);
  else
    return visitor->visitChildren(this);
}

GoliteParser::IdsContext* GoliteParser::ids() {
  IdsContext *_localctx = _tracker.createInstance<IdsContext>(_ctx, getState());
  enterRule(_localctx, 16, GoliteParser::RuleIds);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(123);
    match(GoliteParser::ID);
    setState(128);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GoliteParser::COMMA) {
      setState(124);
      match(GoliteParser::COMMA);
      setState(125);
      match(GoliteParser::ID);
      setState(130);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionsContext ------------------------------------------------------------------

GoliteParser::FunctionsContext::FunctionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GoliteParser::FunctionContext *> GoliteParser::FunctionsContext::function() {
  return getRuleContexts<GoliteParser::FunctionContext>();
}

GoliteParser::FunctionContext* GoliteParser::FunctionsContext::function(size_t i) {
  return getRuleContext<GoliteParser::FunctionContext>(i);
}


size_t GoliteParser::FunctionsContext::getRuleIndex() const {
  return GoliteParser::RuleFunctions;
}

void GoliteParser::FunctionsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctions(this);
}

void GoliteParser::FunctionsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctions(this);
}


std::any GoliteParser::FunctionsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GoliteParserVisitor*>(visitor))
    return parserVisitor->visitFunctions(this);
  else
    return visitor->visitChildren(this);
}

GoliteParser::FunctionsContext* GoliteParser::functions() {
  FunctionsContext *_localctx = _tracker.createInstance<FunctionsContext>(_ctx, getState());
  enterRule(_localctx, 18, GoliteParser::RuleFunctions);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GoliteParser::FUNC) {
      setState(131);
      function();
      setState(136);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

GoliteParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GoliteParser::FunctionContext::FUNC() {
  return getToken(GoliteParser::FUNC, 0);
}

tree::TerminalNode* GoliteParser::FunctionContext::ID() {
  return getToken(GoliteParser::ID, 0);
}

GoliteParser::ParametersContext* GoliteParser::FunctionContext::parameters() {
  return getRuleContext<GoliteParser::ParametersContext>(0);
}

tree::TerminalNode* GoliteParser::FunctionContext::L_CURLY() {
  return getToken(GoliteParser::L_CURLY, 0);
}

GoliteParser::DeclarationsContext* GoliteParser::FunctionContext::declarations() {
  return getRuleContext<GoliteParser::DeclarationsContext>(0);
}

GoliteParser::StatementsContext* GoliteParser::FunctionContext::statements() {
  return getRuleContext<GoliteParser::StatementsContext>(0);
}

tree::TerminalNode* GoliteParser::FunctionContext::R_CURLY() {
  return getToken(GoliteParser::R_CURLY, 0);
}

GoliteParser::ReturnTypeContext* GoliteParser::FunctionContext::returnType() {
  return getRuleContext<GoliteParser::ReturnTypeContext>(0);
}


size_t GoliteParser::FunctionContext::getRuleIndex() const {
  return GoliteParser::RuleFunction;
}

void GoliteParser::FunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction(this);
}

void GoliteParser::FunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GoliteParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction(this);
}

